About section added and carousel fixed to align correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@
 }
 
 /* Index Page */
-.bg-wild {
+.Hogsmeade-ind {
     background-color: #1b0132;
     border-style: solid;
     border-color: #ffdc00;
@@ -51,13 +51,28 @@ body {
 }
 
 /* Carousel */
+.carousel-inner {
+    height: 540px;
+    
+}
+.carousel-item img {
+    margin:auto
 
- .carousel-inner > .item > img,
- .carousel-inner > .item > a > img {
-     display: block;
-     max-width: 100%;
-     height: 400px !important;
- }
+}
+h5 {
+    font-family: 'Roboto', serif;
+    color:cornsilk;
+}
+
+.about-hog h2 {
+    color: #ffdc00;
+}
+
+
+.about-hog {
+    margin-bottom: 100px;
+    text-align: center;
+}
 
 /* Footer */
 .footer {
